# ff-drafter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  proj_points.csv  prompt.md  pyproject.toml  salaries.csv  strategy.example  tasks.py
data/: 2023.csv  proj_2025.csv
prev_seasons/: 2021.csv  2022.csv  2024.csv
